build/00013/H4P_SunriseSunset_esp32s3.log
Processing esp32s3 (board: esp32-s3-devkitc-1; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.35/platform-espressif32.zip; framework: arduino)
--------------------------------------------------------------------------------
Tool Manager: Installing https://github.com/pioarduino/registry/releases/download/0.0.1/esptoolpy-v5.1.0.zip
Unpacking 0% 10% 20%
Tool Manager: tool-esptoolpy@5.1.0 has been installed!
Tool Manager: Installing file:///home/runner/.platformio/tools/tool-esptoolpy
Tool Manager: tool-esptoolpy@5.1.0 has been installed!
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (55.3.35) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.5 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.366dadf354 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.0 
 - tool-mklittlefs @ 3.2.0 
 - toolchain-xtensa-esp-elf @ 14.2.0+20251107
Converting H4P_SunriseSunset.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 50 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.10+sha.9125640
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.8+sha.b12de62
Building in release mode
Compiling .pio/build/esp32s3/src/H4P_SunriseSunset.ino.cpp.o
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_SunriseSunset.ino: In function 'void onRTC()':
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_SunriseSunset.ino:8:3: error: 'h4ss' was not declared in this scope
    8 |   h4ss.at(SUNRISE,OFF,[](bool b){ Serial.printf("COCK-A-DOODLE-DOO!"); });
      |   ^~~~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_SunriseSunset.ino:8:11: error: 'SUNRISE' was not declared in this scope
    8 |   h4ss.at(SUNRISE,OFF,[](bool b){ Serial.printf("COCK-A-DOODLE-DOO!"); });
      |           ^~~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_SunriseSunset.ino:9:17: error: 'SUNSET' was not declared in this scope; did you mean 'SYN_SENT'?
    9 |   h4ss.atSource(SUNSET,ON); // BinarySwitch on @ sunset
      |                 ^~~~~~
      |                 SYN_SENT
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_SunriseSunset.ino: At global scope:
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_SunriseSunset.ino:15:1: error: 'H4P_Sunrise' does not name a type
   15 | H4P_Sunrise h4ss("48.4738943","-0.6029038"); // My French heaven
      | ^~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_SunriseSunset.ino:17:25: error: 'RELAY_BUILTIN' was not declared in this scope; did you mean 'LED_BUILTIN'?
   17 | H4P_BinarySwitch h4onof(RELAY_BUILTIN,ACTIVE_HIGH,OFF);
      |                         ^~~~~~~~~~~~~
      |                         LED_BUILTIN
*** [.pio/build/esp32s3/src/H4P_SunriseSunset.ino.cpp.o] Error 1
========================== [FAILED] Took 9.55 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
esp32s3        FAILED    00:00:09.546
==================== 1 failed, 0 succeeded in 00:00:09.546 ====================